--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-ui-scrollspy": "^2.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
